bugfix kickstarter image scrollbar

--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -67,7 +67,7 @@
 #kickstarter-coming-soon {
     height: auto;
     position: absolute;
-    right: 0;
+    right: 50px;
     top: 0;
     width: 33vh;
     z-index: 1000;
